# quadrangle_detection

./: CMakeLists.txt  Dockerfile  README.md
src/: quadrangle_detection.cpp
